# ros-orchestration

./: CMakeLists.txt  README.md  package.xml
bailey_controller/: bailey_controller.launch  bailey_controller_node.py  machine.py
controller/: bailey_controller.launch  bailey_controller_node.py  controller.py  machine.py  orchestration.launch  recipe.py
recipes/: poc.yml  tol.yml
src/: conductor.py  orchestration.launch  orchestration.py  suite.py
suites/: poc.yml
